# rusty-svg

./: .npmignore  Cargo.toml  IconDashboardOutlined.jsx  IconRenewableEnergyOutlined.jsx  README.md  package.json  rusty-svg.config.toml
components/: DashboardOutlined.tsx  IconDashboardOutlined.jsx  IconDashboardOutlined.tsx  IconRenewableEnergyOutlined.jsx  IconRenewableEnergyOutlined.tsx  RenewableEnergyOutlined.tsx
src/: main.rs
