[package]
name = "rusty-svg"
version = "0.1.2"
edition = "2021"
authors = ["Jaeha Lee <wogkdkrm112@gmail.com>"]
description = "A CLI to convert SVG files into React components"
repository = "https://github.com/cargo-fob/rusty-svg"
license = "MIT"
readme = "README.md"
keywords = ["svg", "react", "cli", "typescript"]
categories = ["command-line-utilities"]
rust-version = "1.85.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.35", features = ["derive"] }
convert_case = "0.8.0"
inquire = "0.7.5"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.20"
walkdir = "2.5.0"
